# agentos-owl

./: .env  .gitignore  AGENTS.md  ARCHITECT.md  DESIGN.md  README.md  TODO.md  architect.md  biome.json  historical_context.txt  package.json  pnpm-lock.yaml  turbo.json
.rules/: check.sh  testBuild.sh
.skills/accurate-ocr/: SKILL.md
.skills/ai-ppt-generator/: SKILL.md
.skills/air-ticket-ocr/: SKILL.md
.skills/baidu-ai-search/: SKILL.md
.skills/baidu-encyclopedia/: SKILL.md
.skills/baidu-geocoding/: SKILL.md
.skills/baidu-ip-geolocation/: SKILL.md
.skills/baidu-poi-detail/: SKILL.md
.skills/baidu-poi-multidim-search/: SKILL.md
.skills/baidu-region-search/: SKILL.md
.skills/baidu-search/: SKILL.md
.skills/baidu-seo-keyword-ranking/: SKILL.md
.skills/baidu-traffic-condition/: SKILL.md
.skills/baidu-weather-query/: SKILL.md
.skills/bus-ticket-ocr/: SKILL.md
.skills/company-hiring-data/: SKILL.md
.skills/company-info-lookup/: SKILL.md
.skills/currency-exchange-rate/: SKILL.md
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
apps/web/src-tauri/src/db/: mod.rs  models.rs  queries.rs  seed.rs
apps/web/src-tauri/src/secure/: mod.rs
docs/: prd.md
prompt/: boss_agent.md  elder_boss.md  sentinel_common.md  sentinel_coordinator.md  sentinel_cto.md  sentinel_planner.md  sentinel_supervisor.md  worker.md
scripts/: start-desktop.sh
src/: App.tsx  index.css  routes.tsx
src/lib/: i18n.ts
(+578 files in other folders)
