[package]
name = "owl-os"
version = "0.0.1"
description = "OwlOS - 意图驱动的 Agent 运行时系统"
authors = ["OwlOS Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "owl_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
keyring = { version = "3", features = ["sync-secret-service"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono", "uuid"] }
pdf-extract = "0.8"
docx-rs = "0.4"
calamine = "0.26"
pulldown-cmark = "0.12"
tokio-cron-scheduler = "0.13"
regex = "1"
rand = "0.8"
argon2 = "0.5"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
